--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
             - run:
                 name: Tests
                 command: npm test
-        persist_to_workspace:
-            root: .
-            paths: .
+            - persist_to_workspace:
+                root: .
+                paths: .
     build:
         docker:
             - image: circleci/node:latest
@@ -27,20 +27,21 @@ jobs:
             - run:
                 name: Build
                 command: npm run build
-        persist_to_workspace:
-            root: .
-            paths:
-                - ./build
+            - persist_to_workspace:
+                root: .
+                paths:
+                    - ./build
     publish:
         docker:
             - image: circleci/python:latest-node
-        run:
-          name: Publish
-          command: |
-              curl -O https://bootstrap.pypa.io/get-pip.py
-              python3 get-pip.py --user
-              pip3 install awscli --upgrade --user
-              export PATH=/home/circleci/.local/bin:$PATH
+        steps:
+            - run:
+                name: Publish
+                command: |
+                    curl -O https://bootstrap.pypa.io/get-pip.py
+                    python3 get-pip.py --user
+                    pip3 install awscli --upgrade --user
+                    export PATH=/home/circleci/.local/bin:$PATH
 workflows:
     version: 2
     workflow:
