--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
         docker:
             - image: circleci/python:latest-node
         steps:
+            - attach_workspace:
+                at: .
             - run:
                 name: Publish
                 command: |
@@ -43,6 +45,10 @@ jobs:
                     python3 get-pip.py --user
                     pip3 install awscli --upgrade --user
                     export PATH=/home/circleci/.local/bin:$PATH
+                    aws configure set aws_access_key_id $AWS_ACCESS
+                    aws configure set aws_secret_access_key $AWS_SECRET
+                    aws s3 sync . s3://homework-front
+Output:
 workflows:
     version: 2
     workflow:
