--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
                     export PATH=/home/circleci/.local/bin:$PATH
                     aws configure set aws_access_key_id $AWS_ACCESS
                     aws configure set aws_secret_access_key $AWS_SECRET
-                    aws s3 sync ./build s3://homework-front
+                    aws s3 sync ./build s3://brandonfitzgibbon.com
 Output:
 workflows:
     version: 2
