--- a/package.json
+++ b/package.json
@@ -3,15 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@types/dotenv": "^6.1.1",
     "@types/jest": "24.0.13",
     "@types/node": "12.0.2",
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.0.9",
+    "@types/react-test-renderer": "^16.8.1",
+    "@types/redux": "^3.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
-    "typescript": "3.4.5",
-    "@material-ui/core": "^3.9.3"
+    "react-test-renderer": "^16.8.6",
+    "redux": "^4.0.1",
+    "typescript": "3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
